--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/tea_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A Personalized Trip Planning App"
-    />
+    <meta name="description" content="Create the Trip of Your Dreams" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/tea_icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
